--- a/AppIFES/packages.config
+++ b/AppIFES/packages.config
@@ -1,21 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.3.7" targetFramework="net462" />
+  <package id="Core.Calendar" version="0.1.1" targetFramework="net461" />
+  <package id="Core.Calendar.Google" version="0.1.183" targetFramework="net461" />
+  <package id="Core.Common" version="0.1.212" targetFramework="net461" />
+  <package id="Core.Google.Auth" version="0.1.1" targetFramework="net461" />
+  <package id="DDay.iCal" version="1.0.2.575" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
+  <package id="Google.Apis" version="1.9.0" targetFramework="net461" />
+  <package id="Google.Apis.Auth" version="1.9.1" targetFramework="net461" />
+  <package id="Google.Apis.Calendar.v3" version="1.9.0.1220" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.9.1" targetFramework="net461" />
+  <package id="Google.Apis.Plus.v1" version="1.9.0.1710" targetFramework="net461" />
+  <package id="Google.GData.Client" version="2.2.0.0" targetFramework="net461" />
   <package id="jQuery" version="3.2.1" targetFramework="net462" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
+  <package id="log4net" version="2.0.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc.pt-br" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.Razor.pt-br" version="3.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebPages.pt-br" version="3.2.3" targetFramework="net462" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net462" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Modernizr" version="2.6.2" targetFramework="net462" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net462" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net462" />
   <package id="MySql.Web" version="6.9.9" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net461" />
+  <package id="Zlib.Portable" version="1.10.0" targetFramework="net461" />
 </packages>
