--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey = DEV WEB IFES2017
-sonar.projectName = APP-IFES 2017
+sonar.projectKey = DEV_WEB_IFES2017
+sonar.projectName = APP_IFES_2017
 sonar.projectVersion = 1.0
 sonar.sources = AppIFES
 sonar.language=C#
