--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,6 @@ sonar.projectKey = DEV_WEB_IFES2017
 sonar.projectName = APP_IFES_2017
 sonar.projectVersion = 1.0
 sonar.sources = AppIFES
-sonar.language=C#
+sonar.language=cs
 sonar.sourceEncoding=UTF-8
 sonar.host.url= https://sonarqube.com
