--- a/AppIFES/packages.config
+++ b/AppIFES/packages.config
@@ -16,6 +16,7 @@
   <package id="Grid.Mvc" version="3.0.0" targetFramework="net461" />
   <package id="Grid.Mvc.DatePicker" version="1.0.0" targetFramework="net461" />
   <package id="jQuery" version="3.2.1" targetFramework="net462" />
+  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="log4net" version="2.0.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net462" />
