Criação da Controller Usuário API

--- a/AppIFES/Web.config
+++ b/AppIFES/Web.config
@@ -112,4 +112,11 @@
     <remove name="ConfBanco" />
     <add name="ConfBanco" connectionString="server=br-cdbr-azure-south-b.cloudapp.net;user id=b18e7a6ec51245;password=c0365d63;persistsecurityinfo=True;database=appifes" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
