--- a/AppIFES/packages.config
+++ b/AppIFES/packages.config
@@ -23,6 +23,10 @@
   <package id="Microsoft.AspNet.Mvc.pt-br" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.Razor.pt-br" version="3.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebPages.pt-br" version="3.2.3" targetFramework="net462" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net461" />
