--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,3 +13,8 @@ before_build:
 artifacts:
   - path: APPIfes
     name: APPIfes
+deploy:
+- provider: Environment
+  name: APPIfes
+  on:
+      branch: V0110
